--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,21 +5,28 @@
     <string name="tv3_text">test</string>
     <string name="btn_next_text">显示意图跳转下一个activity</string>
     <string name="btn_next_implicit_text">隐式意图跳转下一个activity</string>
-    <string name="btn_login_text">模拟登录</string>
-    <string name="btn_logout_text">模拟退出</string>
+    <string name="btn_fake_login_text">模拟登录</string>
+    <string name="btn_login_text">登录</string>
+    <string name="btn_logout_text">退出</string>
     <string name="btn_meta_data_text">元数据</string>
     <string name="btn_scroll_text">滚动条</string>
     <string name="btn_btn_text">按钮</string>
     <string name="btn_form_text">表单设计</string>
     <string name="btn_datetime_text">日期时间</string>
 
+    <string name="rb_otp_text">验证码登录</string>
+    <string name="rb_password_text">密码登录</string>
 
-    <string name="short_label1">first</string>
-    <string name="long_label1">第一个</string>
+    <string name="ll_phone_pre_text">手机号</string>
+    <string name="form_phone_hint">请输入手机号</string>
 
-    <string name="short_label2">second</string>
-    <string name="long_label2">第二个</string>
+    <string name="ll_otp_pre_text">验证码</string>
+    <string name="form_otp_hint">请输入验证码</string>
 
-    <string name="short_label3">third</string>
-    <string name="long_label3">第三个</string>
+    <string name="ll_password_pre_text">密码</string>
+    <string name="form_password_hint">请输入密码</string>
+
+    <string name="form_fetch_otp_text">获取验证码</string>
+    <string name="form_forget_password_text">忘记密码</string>
+    <string name="form_remember_password_text">记住密码</string>
 </resources>
