项目名称路径调整

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">myapp</string>
+    <string name="app_name">app</string>
     <string name="tv1_text">hello world</string>
     <string name="tv2_text">hello world hello world</string>
     <string name="tv3_text">test</string>
