--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,7 @@
     <string name="form_fetch_otp_text">获取验证码</string>
     <string name="form_forget_password_text">忘记密码</string>
     <string name="form_remember_password_text">记住密码</string>
+
+
+    <string name="expose_map_receiver">com.tequeno.map_location</string>
 </resources>
